--- a/res/layout/perfil_usuario_activity_main.xml
+++ b/res/layout/perfil_usuario_activity_main.xml
@@ -3,28 +3,28 @@
     android:layout_height="fill_parent" >
 
     <EditText
-        android:id="@+id/eTinformecpf"
+        android:id="@+id/eTinformeemaillogin"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tVinformecpf"
+        android:layout_below="@+id/tVemaillogin"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textEmailAddress" />
 
     <TextView
-        android:id="@+id/tVinformeemail"
+        android:id="@+id/tVinformesenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/eTinformecpf"
-        android:layout_below="@+id/eTinformecpf"
+        android:layout_alignLeft="@+id/eTinformeemaillogin"
+        android:layout_below="@+id/eTinformeemaillogin"
         android:layout_marginTop="30dp"
         android:text="@string/senha" />
 
     <TextView
-        android:id="@+id/tVinformecpf"
+        android:id="@+id/tVemaillogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/eTinformecpf"
+        android:layout_alignLeft="@+id/eTinformeemaillogin"
         android:layout_alignParentTop="true"
         android:layout_marginTop="102dp"
         android:text="@string/email" />
@@ -40,11 +40,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
-        android:id="@+id/eTinformeemail"
+        android:id="@+id/eTinformesenha"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tVinformeemail"
-        android:layout_below="@+id/tVinformeemail"
+        android:layout_alignLeft="@+id/tVinformesenha"
+        android:layout_below="@+id/tVinformesenha"
         android:ems="10"
         android:inputType="textPassword" />
 
@@ -52,7 +52,7 @@
         android:id="@+id/tVesquecisenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/eTinformeemail"
+        android:layout_below="@+id/eTinformesenha"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:onClick="recuperarsenha"
