--- a/res/layout/perfil_usuario_recuperar_senha.xml
+++ b/res/layout/perfil_usuario_recuperar_senha.xml
@@ -1,106 +1,75 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="500dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-
-    tools:context=".PerfilUsuarioRecuperarSenha" >
-
-    <TextView
-        android:id="@+id/tVinformecpf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tVinformeemail"
-        android:layout_alignLeft="@+id/eTinformeseucpf"
-        android:layout_marginBottom="80dp"
-        android:text="@string/informecpf" />
-
-    <TextView
-        android:id="@+id/tVinformeemail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/eTinformeseucpf"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="211dp"
-        android:text="@string/informeemal" />
-
-    <EditText
-        android:id="@+id/eTinformeseucpf"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tVinformecpf"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:ems="10"
-        android:inputType="number" />
-
-    <EditText
-        android:id="@+id/eTemail"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tVinformeemail"
-        android:layout_below="@+id/tVinformecpf"
-        android:ems="10"
-        android:inputType="textEmailAddress" >
-    </EditText>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginBottom="25dp"
+    android:layout_marginLeft="25dp"
+    android:layout_marginRight="25dp"
+    android:layout_marginTop="25dp"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/tVgentileza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tVinformecpf"
-        android:layout_alignLeft="@+id/tVinformecpf"
-        android:layout_marginBottom="47dp"
+        android:layout_marginTop="45dp"
         android:text="@string/gentileza" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+    <TextView
+        android:id="@+id/tVinformesenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/eTinformeseucpf"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/eTinformeseucpf"
-        android:layout_marginBottom="150dp" >
+        android:layout_marginTop="60dp"
+        android:text="@string/informeemal" />
+
+    <EditText
+        android:id="@+id/eTemailinforme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:inputType="textEmailAddress" >
+
+        <requestFocus />
+    </EditText>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp" >
 
         <Button
             android:id="@+id/bTvoltar"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="0.39"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.61"
+            android:textSize="@dimen/FonteBotoes"
             android:onClick="voltar"
-            android:text="@string/voltar"
-            android:textSize="@dimen/FonteBotoes" />
+            android:text="@string/voltar" />
 
         <Button
             android:id="@+id/bTlimpar"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="0.39"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.61"
+            android:textSize="@dimen/FonteBotoes"
             android:onClick="limpar"
-            android:text="@string/limpar"
-            android:textSize="@dimen/FonteBotoes" />
+            android:text="@string/limpar" />
 
         <Button
             android:id="@+id/bTenviar"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_weight="0.39"
-            android:text="@string/enviar"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.61"
+            android:textSize="@dimen/FonteBotoes"
             android:onClick="enviar"
-            android:textSize="@dimen/FonteBotoes" />
-
+            android:text="@string/enviar" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tVnomeusuario"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/linearLayout1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/linearLayout1"
-        android:layout_marginBottom="18dp"
+        android:layout_marginTop="60dp"
         android:text="@string/textosenha" />
 
-</RelativeLayout>
+</LinearLayout>
