--- a/res/layout/perfil_usuario_cadastro.xml
+++ b/res/layout/perfil_usuario_cadastro.xml
@@ -135,6 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.43"
             android:text="@string/salvar"
+            android:onClick="salvar"
             android:textSize="@dimen/FonteBotoes" />
 
         <Button
